change plugin settings